Set up navigation from main fragment to fragment detail

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,17 @@
         android:id="@+id/mainFragment"
         android:name="com.example.pruebatecnicabkool.ui.fragment.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_launchDetailFragment"
+            app:destination="@id/launchDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/launchDetailFragment"
+        android:name="com.example.pruebatecnicabkool.ui.fragment.LaunchDetailFragment"
+        android:label="LaunchDetailFragment" >
+        <argument
+            android:name="launchId"
+            app:argType="string"/>
+    </fragment>
 </navigation>
