--- a/app/src/main/res/layout/item_launch.xml
+++ b/app/src/main/res/layout/item_launch.xml
@@ -9,20 +9,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txvLaunchDate"
-        android:text="@string/date_launched"
+        android:id="@+id/txvLaunchName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txvRocketName"
-        android:text="@string/rocket_name"
+        android:id="@+id/txvLaunchDate"
+        android:text="@string/date_launched"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txvLaunchDate"
-        android:layout_marginStart="16dp"/>
+        app:layout_constraintTop_toBottomOf="@id/txvLaunchName"
+        android:layout_marginStart="16dp" />
 
     <ImageView
         android:layout_width="24dp"
@@ -30,7 +29,7 @@
         android:id="@+id/imvStatus"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/txvLaunchDate"
-        app:layout_constraintBottom_toBottomOf="@id/txvRocketName"
+        app:layout_constraintBottom_toBottomOf="@id/txvLaunchName"
         android:layout_marginEnd="24dp"/>
 
 
