--- a/app/src/main/res/layout/fragment_launch_detail.xml
+++ b/app/src/main/res/layout/fragment_launch_detail.xml
@@ -23,4 +23,14 @@
         app:layout_constraintTop_toBottomOf="@id/txvLaunchDetailName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnPlay"
+        android:text="@string/video"
+        app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
