--- a/app/src/main/res/layout/fragment_launch_detail.xml
+++ b/app/src/main/res/layout/fragment_launch_detail.xml
@@ -24,13 +24,62 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lytInfo"
+        app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txvLaunchDetailDate"
+            android:text="@string/date_launched"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txvLaunchDetailSuccess"
+            android:text="@string/success"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/txvLaunchDetailDate"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="80dp"/>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/imvLaunchDetailSuccess"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/txvLaunchDetailSuccess"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txvLaunchDetailInfo"
+        app:layout_constraintTop_toBottomOf="@id/lytInfo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnPlay"
         android:text="@string/video"
-        app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg"
+        app:layout_constraintTop_toBottomOf="@id/txvLaunchDetailInfo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
