--- a/app/src/main/res/layout/fragment_launch_detail.xml
+++ b/app/src/main/res/layout/fragment_launch_detail.xml
@@ -24,52 +24,56 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lytInfo"
-        app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg">
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/gdl10"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/gdl90"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txvLaunchDetailDate"
             android:text="@string/date_launched"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg"
+            app:layout_constraintStart_toStartOf="@id/gdl10"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txvLaunchDetailSuccess"
             android:text="@string/success"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/txvLaunchDetailDate"
+            app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg"
+            app:layout_constraintEnd_toStartOf="@id/imvLaunchDetailSuccess"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="80dp"/>
+            android:layout_marginTop="10dp" />
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:id="@+id/imvLaunchDetailSuccess"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/txvLaunchDetailSuccess"
+            app:layout_constraintTop_toBottomOf="@id/imvLaunchDetailImg"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toStartOf="@id/gdl90"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/txvLaunchDetailInfo"
-        app:layout_constraintTop_toBottomOf="@id/lytInfo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txvLaunchDetailSuccess"
+        app:layout_constraintStart_toStartOf="@id/gdl10"
+        app:layout_constraintEnd_toEndOf="@id/gdl90"
         android:layout_marginTop="10dp"/>
 
     <Button
